add the prefix for the bg-clip

--- a/assets/css/styles/main.css
+++ b/assets/css/styles/main.css
@@ -289,6 +289,7 @@ section.home-section::before {
   font-weight: 900;
   font-family: "Montserrat", sans-serif;
   background: linear-gradient(145deg, #f81f01, #ee076e);
+  -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
